--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,7 +14,13 @@ body {
 	font-size: 40px;
 	margin: 0 0 80px  0;
 }
-
+button{
+	padding: 20px;
+	font-size: large;
+	color: red;
+	background-color: black;
+	border: 2px solid grey;
+}
 
 /** Nav Bar **/
 .navbar {
