--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -140,6 +140,10 @@ body {
 .wallpaper .search-bar {
 	position: absolute;
 	top: 50%;
+	width: 400px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 	overflow: hidden;
 	transform: translateY(-50%);
 	background-color: #272727;
@@ -152,7 +156,7 @@ body {
 .wallpaper .search-bar input {
 	all: unset;
 	font-size: 16px;
-	margin: 10px 15px;
+	margin-left: 15px;
 	background-color: #282828;
 	color: white;
 }
@@ -162,9 +166,10 @@ body {
 
 .wallpaper .search-bar button {
 	all: unset;
+	width: 50px;
 	color: #ffffff;
 	background-color: #cc6a14;
-	width: 45px;
+
 	height: 40px;
 	text-align: center;
 }
