--- a/assets/css/bookride.css
+++ b/assets/css/bookride.css
@@ -9,19 +9,14 @@
 
 
 
-
-
 .result-tab {
     display: flex;
     flex-direction: row;
     margin: 10vh 5vw;
     border: solid 0px;
     border-radius: 20px;
-    /* background-color: #f8f8f8; */
     overflow: hidden;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 0px 24px;
-    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-    /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px; */
 }
 
 
@@ -122,7 +117,7 @@
     display: flex;
     flex-direction: row;
     width: 40%;
-    /* min-width: 360px; */
+    min-width: 360px;
     /* border: solid 1px; */
     border-radius: 10px;
     padding: 10px;
@@ -154,6 +149,12 @@
 }
 .right-tab .item .left #user-points span {
     color: #272727;
+}
+.right-tab .item .left #message {
+    width: 20%;
+    text-decoration: none;
+    color: #000;
+    font-size: 20px;
 }
 .right-tab .item .right {
     display: flex;
@@ -198,11 +199,14 @@
     flex-direction: row;
     justify-content: space-around;
     gap: 20px;
-    background-color: #ac6f17;
-    color: #e7e7e7;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
+    background-color: #1c2937;
     bottom: 0px;
     left: 0px;
     right: 0px;
+}
+.right-tab .item .right .bottom p {
+    font-family: 'Open Sans', sans-serif;
+    color: #e7e7e7;
+    font-weight: bold;
+    padding: 2px;
 }
