--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background-color: #ffffff;
+	background-color: #fffdd0;
 }
 
 #heading {
@@ -14,13 +14,7 @@ body {
 	font-size: 40px;
 	margin: 0 0 80px  0;
 }
-button{
-	padding: 20px;
-	font-size: large;
-	color: red;
-	background-color: black;
-	border: 2px solid grey;
-}
+
 
 /** Nav Bar **/
 .navbar {
@@ -35,6 +29,7 @@ button{
 }
 
 .navbar .container {
+	background-color: rgba(43, 43, 43, 0.3);
 	position: relative;
 	display: flex;
 	flex-direction: row;
@@ -65,9 +60,9 @@ button{
 	transition: 0.3s;
 }
 .navbar .container .links a:hover {
-	color: #9b9494;
-	text-decoration: underline;
-	text-underline-offset: 5px;
+	color: #ffffff;
+	/* text-decoration: underline; */
+	/* text-underline-offset: 5px; */
 }
 
 .navbar .links #givetake-buttons {
@@ -80,7 +75,7 @@ button{
 }
 
 .navbar .links #givetake-buttons p {
-	color: #b9b9b9;
+	color: #868686;
 }
 
 .navbar .links #givetake-buttons #button-container {
@@ -101,6 +96,58 @@ button{
 	background-color: #d8d8d8;
 	color: #3d3d3d;
 	text-decoration: none;
+}
+.navbar .links #current {
+	/* background-color: #d8d8d8; */
+	text-decoration: underline;
+	text-underline-offset: 10px;
+	border: solid 0px;
+	border-radius: 10px;
+	padding: 5px 10px;
+}
+.navbar .links #givetake-buttons #current {
+	all: unset;
+	border-radius: 0;
+	background-color: #d8d8d8;
+	color: #3d3d3d;
+}
+
+.navbar .login {
+	position: relative;
+}
+.navbar .login a {
+	text-decoration: none;
+	color: #f5deb3;
+}
+
+.navbar .login a span {
+	padding: 0 10px;
+}
+.navbar .login .login-menu {
+	display: none;
+	transition: 0.4s;
+}
+.navbar .login:hover .login-menu {
+	position: absolute;
+	display: block;
+	z-index: 1;
+	width: 300px;
+	height: 100px;
+	background-color: #272727;
+	padding: 10px;
+	right: 0px;
+	box-shadow: #42464933 0px 0px 24px;
+	animation: slowview 0.4s;
+}
+@keyframes slowview {
+	0% {opacity: 0;}
+}
+.navbar .login .login-menu p {
+	color: #ffffff;
+	padding: 10px 0;
+}
+.navbar .login .login-menu a {
+	text-decoration: underline;
 }
 
 
@@ -123,7 +170,6 @@ button{
     user-select: none;
 
 }
-
 .wallpaper img {
 	object-fit: cover;
 	width: 100%;	
@@ -131,36 +177,33 @@ button{
 	opacity: 90%;
 	filter: brightness(80%);
 }
-
 .wallpaper #message {
 	position: absolute;
 	top: 35%;
-	z-index: 3;
+	z-index: 0;
 	color: #ffffff;
 	font-family: 'Nunito', sans-serif;
 	font-weight: 300;
 	font-size: 40px;
 	transform: translateY(-50%);
+	animation: out-to-in 0.5s;
+	text-wrap: nowrap;
 }
-
+@keyframes out-to-in {
+	0% {letter-spacing: 0.8em; opacity: 0.2;}
+	100% {letter-spacing: initial; opacity: 1;}
+}
 .wallpaper .search-bar {
 	position: absolute;
 	top: 50%;
-	width: 400px;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
 	overflow: hidden;
 	transform: translateY(-50%);
-	background-color: #272727;
-	border: solid 3px #3a3a3a;
-	border-radius: 10px;
-	/* padding: 5px 10px; */
-	font-family: 'Nunito', sans-serif;
 }
-
 .wallpaper .search-bar input {
 	all: unset;
+	width: 100%;
 	font-size: 16px;
 	margin-left: 15px;
 	background-color: #282828;
@@ -169,21 +212,65 @@ button{
 .wallpaper .search-bar input::placeholder {
 	color: #bbbbbb;
 }
-
+.wallpaper .search-bar #places{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	overflow: hidden;
+	width: 400px;
+	height: 50px;
+	font-family: 'Nunito', sans-serif;
+	border: solid 3px #3a3a3a;
+	border-radius: 10px 0 0 10px;
+	background-color: #272727;
+}
+.wallpaper .search-bar #datetime {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	width: 50px;
+	font-size: 20px;
+	position: relative;
+	color: #fffddf;
+	border: solid 3px #3a3a3a;
+	border-radius: 0 10px 10px 0;
+	background-color: #272727;
+}
+.wallpaper .search-bar #datetime input {
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	cursor: pointer;
+}
+.wallpaper .search-bar #datetime input::-webkit-calendar-picker-indicator {
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	cursor: pointer;
+}
 .wallpaper .search-bar button {
 	all: unset;
-	width: 50px;
+	width: 60px;
 	color: #ffffff;
 	background-color: #cc6a14;
-
-	height: 40px;
 	text-align: center;
+	border-radius: 100px;
+	margin-left: 15px;
 }
 .wallpaper .search-bar button:hover {
 	cursor: pointer;
 	background-color: #ee862c;
 	transition: 0.3s;
 }
+
 
 
 /* Features of Sharewheels */
@@ -262,7 +349,7 @@ button{
 	flex-direction: column;
 	text-align: center;
 	align-items: center;
-	background-color: #4d555e;
+	background-color: #201f24;
 	padding: 10vh 15vw;
 	margin: 10vh 0 ;
 }
@@ -440,7 +527,7 @@ button{
 }
 
 .footer .right #moto p {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Nunito', sans-serif;
 	font-size: 20px;
 	color: #97a5b3;
 }
@@ -479,6 +566,6 @@ button{
 
 .footer-end a {
 	all: unset;
+	cursor: pointer;
 	color: #6e7881;
-
 }
